--- a/index.html
+++ b/index.html
@@ -156,9 +156,8 @@
     </section>
     <!-- Footer -->
     <section id="footer">
-        <img src="img/wave.png" class="footer-img">
         <div class="container">
-            <div class="row">
+            <div class="row pt-5">
                 <div class="col-md-2 footer-box">
                     <img src="img/logo.png" alt="maxdom">
                 </div>
